// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSubPixels 1`] = `
Uint32Array [
  0,
  0,
  0,
  0,
  1,
  1,
  1,
  1,
  2,
  2,
  2,
  2,
  3,
  3,
  3,
  3,
]
`;

exports[`sprite 1`] = `
Uint32Array [
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  4278190335,
  4278190335,
  0,
  0,
  4278190335,
  4294902015,
  0,
  4278190335,
  4278190335,
  4278190335,
  4278190335,
  4278190335,
  4278190335,
  4278190335,
  4294902015,
  4278190335,
  4278190335,
  4278190335,
  4278190335,
  4278190335,
  4278190335,
  4278190335,
  4294902015,
  0,
  4278190335,
  4278190335,
  4278190335,
  4278190335,
  4278190335,
  4278190335,
  0,
  0,
  0,
  4278190335,
  4278190335,
  4278190335,
  4278190335,
  0,
  0,
  0,
  0,
  0,
  4278190335,
  4278190335,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;
